--- a/package.json
+++ b/package.json
@@ -128,6 +128,21 @@
                 "title": "Sort Problems",
                 "category": "Leetnotion",
                 "icon": "$(sort-precedence)"
+            },
+            {
+                "command": "leetnotion.clearAllData",
+                "title": "Clear all data",
+                "category": "Leetnotion"
+            },
+            {
+                "command": "leetnotion.updateTemplateInfo",
+                "title": "Update template information in the extension",
+                "category": "Leetnotion"
+            },
+            {
+                "command": "leetnotion.integrateNotion",
+                "title": "Integrate notion with the leetnotion extension",
+                "category": "Leetnotion"
             }
         ],
         "viewsContainers": {
