--- a/package.json
+++ b/package.json
@@ -772,7 +772,7 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
+        "compile": "node ./esbuild.js",
         "watch": "tsc -watch -p ./",
         "lint": "tslint --project tsconfig.json -e src/*.d.ts -t verbose",
         "build": "vsce package",
@@ -795,6 +795,7 @@
         "@vscode/webview-ui-toolkit": "^1.4.0",
         "axios": "^1.6.8",
         "bottleneck": "^2.19.5",
+        "esbuild": "^0.24.0",
         "fs-extra": "^10.0.0",
         "highlight.js": "^10.7.2",
         "lodash": "^4.17.21",
