--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-leetnotion",
     "displayName": "Leetnotion",
     "description": "Solve LeetCode problems in VsCode and keep your submissions in sync with your Ultimate LeetCode Tracker template in notion",
-    "version": "1.3.0",
+    "version": "1.4.0",
     "author": "Leetnotion",
     "publisher": "Leetnotion",
     "license": "MIT",
@@ -94,6 +94,30 @@
                 "command": "leetnotion.submitSolution",
                 "title": "Submit to LeetCode",
                 "category": "Leetnotion"
+            },
+            {
+                "command": "leetnotion.searchCompany",
+                "title": "Search Company",
+                "category": "Leetnotion",
+                "icon": "$(search)"
+            },
+            {
+                "command": "leetnotion.searchList",
+                "title": "Search List",
+                "category": "Leetnotion",
+                "icon": "$(search)"
+            },
+            {
+                "command": "leetnotion.searchTag",
+                "title": "Search Tag",
+                "category": "Leetnotion",
+                "icon": "$(search)"
+            },
+            {
+                "command": "leetnotion.searchSheets",
+                "title": "Search Sheets",
+                "category": "Leetnotion",
+                "icon": "$(search)"
             },
             {
                 "command": "leetnotion.addFavorite",
@@ -229,6 +253,26 @@
                 {
                     "command": "leetnotion.removeFavorite",
                     "when": "view == leetnotionExplorer && viewItem == problem-favorite",
+                    "group": "inline"
+                },
+                {
+                    "command": "leetnotion.searchCompany",
+                    "when": "view == leetnotionExplorer && viewItem == company",
+                    "group": "inline"
+                },
+                {
+                    "command": "leetnotion.searchList",
+                    "when": "view == leetnotionExplorer && viewItem == lists",
+                    "group": "inline"
+                },
+                {
+                    "command": "leetnotion.searchTag",
+                    "when": "view == leetnotionExplorer && viewItem == tag",
+                    "group": "inline"
+                },
+                {
+                    "command": "leetnotion.searchSheets",
+                    "when": "view == leetnotionExplorer && viewItem == sheets",
                     "group": "inline"
                 }
             ],
@@ -709,9 +753,9 @@
                     },
                     "leetnotion.allowReportData": {
                         "type": "boolean",
-                        "default": false,
+                        "default": true,
                         "scope": "application",
-                        "description": "Allow LeetCode to report anonymous usage data to improve the product."
+                        "description": "Allow Leetnotion to report anonymous usage data to improve the product."
                     },
                     "leetnotion.enableNotionIntegration": {
                         "type": "boolean",
@@ -785,6 +829,7 @@
         "highlight.js": "^10.7.2",
         "lodash": "^4.17.21",
         "markdown-it": "^8.4.2",
+        "mixpanel": "^0.18.1",
         "require-from-string": "^2.0.2",
         "unescape-js": "^1.1.4",
         "vsc-leetcode-cli": "2.8.1"
